--- a/Systems/climate-management.html
+++ b/Systems/climate-management.html
@@ -91,7 +91,7 @@
 
         <p>This small pressure difference is enough to cause air to leak into the house wherever it can. If the air outside is significantly cooler or warmer than the inside, then the leaks will cause temperature differences to appear that can then be viewed through infrared thermography. Places to look for leaks to seal would be where walls and floors or ceilings meet, where there are penetrations such as electrical outlets or recessed lights, and around doors and windows.</p>
         
-        <figure class="width50 float-left">
+        <figure>
             <img src="../IMG/Deep-Dive/ACH-Graph.png" />
             <figcaption>Air Changes per Hour</figcaption>
         </figure>
@@ -132,13 +132,13 @@
 
         <p>If you assume that the wall is constructed of 2x4s on 16” centers, then the average R-value of that wall with R-13 insulation batts is 12.25.</p>
 
+        <p><strong>Exterior Continuous Insulation</strong></p>
+        <p>If you were to install a layer of 1” rigid foam insulation with an R-value of 6 to the exterior side of that wall, the wall would be R-18.25. Installing that same insulation into the stud bay (say with spray foam) would yield an overall R-value of only 17.7 for this typical wall. Not only is the material therefore more effective, but it also results in the studs themselves being warmer (in winter heating mode) thereby resulting in less moisture condensation inside the wall, which can prevent mold and dryrot. The following infrared thermography provided by Dow Chemical shows this effect visually:</p>
+
         <figure class="clear">
             <img src="../IMG/Deep-Dive/outsulation-thermal-bridging.jpeg" />
             <figcaption>Thermal Loss Before/After Continous Insulation</figcaption>
         </figure>
-
-        <p><strong>Exterior Continuous Insulation</strong></p>
-        <p>If you were to install a layer of 1” rigid foam insulation with an R-value of 6 to the exterior side of that wall, the wall would be R-18.25. Installing that same insulation into the stud bay (say with spray foam) would yield an overall R-value of only 17.7 for this typical wall. Not only is the material therefore more effective, but it also results in the studs themselves being warmer (in winter heating mode) thereby resulting in less moisture condensation inside the wall, which can prevent mold and dryrot. The following infrared thermography provided by Dow Chemical shows this effect visually:</p>
 
     
 <!--         <div class="bottom-nav-wrapper">
