--- a/Systems/climate.html
+++ b/Systems/climate.html
@@ -29,12 +29,12 @@
         </div>
     </nav>
 
+    <img src="../IMG/Systems/Climate/outsulation-photo.jpg" />
+
     <!-- Content -->
     <div class="container">
         <div class="row">
             <div class="column">
-
-                <img src="../IMG/Deep-Dive/outsulation-diagram2.jpeg" />
                 <div class="split left">
                     <img src="../Placeholder/placeholder-img.png">
                 </div>
