--- a/Systems/water.html
+++ b/Systems/water.html
@@ -57,7 +57,7 @@
                     <button class="float-right learn-more" onclick="location.href='recirc-loop.html'" type="button">Learn More ></button>
                 </div>
                 <div class="split right">
-                    <img src="../Placeholder/placeholder-img.png">
+                    <img src="../IMG/Systems/Water/hot-water.jpg">
                 </div>     
             </div>
         </div>
@@ -88,7 +88,7 @@
                     </div>
                 </div>
                 <div class="split right">
-                     <img src="../IMG/Systems/Water/rainwater-capture.jpg">
+                     <img src="../IMG/Systems/Water/rain.jpg">
                 </div>
             </div>
         </div>
