--- a/Systems/sound-air.html
+++ b/Systems/sound-air.html
@@ -37,7 +37,7 @@
         <div class="row">
             <div class="column">
                 <div class="split left">
-                    <img src="../Placeholder/placeholder-img.png">
+                    <img src="../IMG/Systems/Air/dad-HRV.jpg">
                 </div>
                 <div class="split right">
                     <div class="copy-block">
@@ -64,14 +64,14 @@
             </div>
         </div>
     </div>
-    <div class="photos-carousel">
+<!--     <div class="photos-carousel">
         <img src="../Placeholder/photos-carousel.png" />
-    </div>
+    </div> -->
     <div class="container">
         <div class="row">
             <div class="column">
                 <div class="split left">
-                    <img src="../Placeholder/placeholder-img.png">
+                    <img src="../IMG/Systems/Air/conversation.jpg">
                 </div>
                 <div class="split right">
                     <div class="copy-block">
