--- a/Systems/water.html
+++ b/Systems/water.html
@@ -62,9 +62,9 @@
             </div>
         </div>
     </div>
-    <div class="photos-carousel">
+<!--     <div class="photos-carousel">
         <img src="../Placeholder/photos-carousel.png" />
-    </div>
+    </div> -->
     <div class="container">
         <div class="row">
             <div class="column">
