--- a/Systems/climate.html
+++ b/Systems/climate.html
@@ -36,7 +36,7 @@
         <div class="row">
             <div class="column">
                 <div class="split left">
-                    <img src="../Placeholder/placeholder-img.png">
+                    <img src="../IMG/Systems/Climate/outsulation-diagram.jpg">
                 </div>
                 <div class="split right">
                     <div class="copy-block">
@@ -56,15 +56,15 @@
                     </div>
                 </div>
                 <div class="split right">
-                    <img src="../Placeholder/placeholder-img.png" />
+                    <img src="../IMG/Systems/Climate/electric-fireplace.jpg" />
                 </div>
                 </div>     
             </div>
         </div>
     </div>
-    <div class="photos-carousel">
+<!--     <div class="photos-carousel">
         <img src="../Placeholder/photos-carousel.png" />
-    </div>
+    </div> -->
     <div class="container">
         <div class="row">
             <div class="column">
