--- a/Systems/climate.html
+++ b/Systems/climate.html
@@ -69,7 +69,7 @@
         <div class="row">
             <div class="column">
                 <div class="split left">
-                    <img src="../Placeholder/placeholder-img.png">
+                    <img src="../IMG/Systems/Climate/windows.jpg">
                 </div>
                 <div class="split right">
                     <div class="copy-block">
@@ -88,14 +88,14 @@
                     </div>
                 </div>
                 <div class="split right">
-                     <img src="../Placeholder/placeholder-img.png">
+                     <img src="../IMG/Systems/Climate/heat-pump.jpg">
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="column">
                 <div class="split left">
-                    <img src="../Placeholder/placeholder-img.png">
+                    <img src="../IMG/Systems/Climate/sun-path.jpg">
                 </div>
                 <div class="split right">
                     <div class="copy-block">
