--- a/design.html
+++ b/design.html
@@ -101,13 +101,13 @@
         <div class="row">
             <div class="column">
                 <div class="split left">
-                    <img src="IMG/Design/no-voc.jpg">
+                    <img src="IMG/Design/kid-jumprope.jpg">
                 </div>
 
                 <div class="split right">
                     <div class="copy-block">
                         <h2>Creating Healthy Spaces</h2>
-                        <p class="body-md">Conventional buildings off-gas dangerous chemicals known as volatile organic compounds (VOCs). By coupling tight air sealing with a Heat Recovery Ventilation system, your air is constantly fresh, filtered, and oxygenated—replaced every three hours. This means fewer allergens, molds, problems, and keeps you alert and sniffle-free.</p>
+                        <p class="body-md">Conventional buildings off-gas dangerous chemicals known as volatile organic compounds (VOCs). By coupling tight air sealing with a Heat Recovery Ventilation system, your air is constantly fresh, filtered, and oxygenated—replaced every three hours. This means fewer allergens, molds, problems, and keeps you and your family alert and sniffle-free.</p>
 
 
                     </div>
