--- a/Systems/climate.html
+++ b/Systems/climate.html
@@ -18,7 +18,7 @@
 
     <div id="nav-menu"></div>
 
-    <nav>
+    <nav class="nav-fixed">
         <div class="nav-wrapper">
             <!-- Nav Menu Button -->
             <button class="menu-btn">&#9776;</button>
@@ -28,6 +28,8 @@
             <a href="../index.html"><img src="../IMG/nav-logo.png" id="nav-logo" /></a>
         </div>
     </nav>
+
+    <div class="nav-spacer"></div>
 
     <img src="../IMG/Systems/Climate/outsulation-photo.jpg" />
 
