--- a/Systems/electricity.html
+++ b/Systems/electricity.html
@@ -25,7 +25,7 @@
 
     <div id="nav-menu"></div>
 
-    <nav>
+    <nav class="nav-fixed">
         <div class="nav-wrapper">
             <!-- Nav Menu Button -->
             <button class="menu-btn">&#9776;</button>
@@ -35,6 +35,8 @@
             <a href="../index.html"><img src="../IMG/nav-logo.png" id="nav-logo" /></a>
         </div>
     </nav>
+
+    <div class="nav-spacer"></div>
 
     <div class="hero-banner" id="electricity-infographic"></div>
 
