--- a/Systems/ev-charging.html
+++ b/Systems/ev-charging.html
@@ -39,6 +39,11 @@
 
          <p>Electric cars require a charger. You can choose between faster chargers (under an hour for a full charge) which will cost more to install or slower chargers which can run off normal household power.  In terms of the house wiring, it is simply another electrical appliance, albeit the largest one in the house. Ideally, you wire it on its own circuit or put it on a circuit that can accomodate the power needs of your chosen charger.</p>
 
+         <figure class="clear">
+            <img src="../IMG/Deep-Dive/curbside-charging.jpg" />
+            <figcaption>Simple Curbside E.V. Charger</figcaption>
+        </figure>
+
         <p>Electric utilities provide incentives for electric car owners to charge during the utility’s lowest-cost time period, generally the middle of the night. Electric cars all  come with software onboard to charge preferentially during these lowest-cost periods, while still having the car fully charged when the owner needs it to be.</p>
 
         <h2>Electric car economics</h2>
