--- a/Systems/sound-air.html
+++ b/Systems/sound-air.html
@@ -19,7 +19,7 @@
 
     <div id="nav-menu"></div>
 
-    <nav>
+    <nav class="nav-fixed">
         <div class="nav-wrapper">
             <!-- Nav Menu Button -->
             <button class="menu-btn">&#9776;</button>
@@ -29,6 +29,8 @@
             <a href="../index.html""><img src="../IMG/nav-logo.png" id="nav-logo" /></a>
         </div>
     </nav>
+
+    <div class="nav-spacer"></div>
 
     <div class="hero-banner" id="air-infographic"></div>
 
@@ -71,7 +73,7 @@
         <div class="row">
             <div class="column">
                 <div class="split left">
-                    <img src="../IMG/Systems/Air/conversation2.jpg">
+                    <img src="../IMG/Systems/Air/conversation3.jpg">
                 </div>
                 <div class="split right">
                     <div class="copy-block">
