--- a/Systems/water.html
+++ b/Systems/water.html
@@ -18,7 +18,7 @@
 
     <div id="nav-menu"></div>
 
-    <nav>
+    <nav class="nav-fixed">
         <div class="nav-wrapper">
             <!-- Nav Menu Button -->
             <button class="menu-btn">&#9776;</button>
@@ -28,6 +28,8 @@
             <a href="../index.html"><img src="../IMG/nav-logo.png" id="nav-logo" /></a>
         </div>
     </nav>
+
+    <div class="nav-spacer"></div>
 
     <div class="hero-banner" id="water-infographic"></div>
 
@@ -57,7 +59,7 @@
                     <button class="float-right learn-more" onclick="location.href='recirc-loop.html'" type="button">Learn More ></button>
                 </div>
                 <div class="split right">
-                    <img src="../IMG/Systems/Water/hot-water.jpg">
+                    <img src="../IMG/Systems/Water/faucet.jpg">
                 </div>     
             </div>
         </div>
