--- a/Systems/greywater.html
+++ b/Systems/greywater.html
@@ -45,11 +45,26 @@
 
         <p>The black water needs to go directly into a sewer, but the gray water is minimally contaminated, and is potentially available for some non-drinking uses, such as irrigation or toilet tank refilling.</p>
 
+        <figure class="clear">
+            <img src="../IMG/Deep-Dive/greywater-tank.jpg" />
+            <figcaption>Greywater Holding Tank in Basement</figcaption>
+        </figure>
+
         <p>In new construction or in an extensive remodelling, there is an opportunity for constructing a second set of drain pipes for gray water. LilyPad employs a system that incorporates a holding tank, fresh water flush system, and motorized diverter valves. The outflow from the holding tank is pumped through a motorized index valve to each of six underground pipe runs that sequentially feeds the water to plant roots in different zones in the yard.</p>
+
+        <figure class="clear">
+            <img src="../IMG/Deep-Dive/diversion-switch.jpg" />
+            <figcaption>Diversion Value Activated by Remote Switch Next to Sinks</figcaption>
+        </figure>
 
         <p>Near each gray water drain there is a button which activates a diverter valve before the holding tank. Pressing the button moves the valve, and diverts the drain flow from gray water to black water (sewer) or vice versa. That way, if you need to put something nasty down the drain, like hair dye or cleaning chemicals, you can divert the flow to the sewer, then put it back to normal gray water recovery when finished.</p>
 
         <p>The holding tank has a filtration system to prevent bacterial and algal blooms, and only requires cleaning once a year. When the tank gets full, a pump moves the stored water through the indexing valve, and out to the garden. The pump activates once every 24 hours if it hasn’t been turned on, flushing with fresh water to keep the system active and clean.</p>
+
+        <figure class="clear">
+            <img src="../IMG/Deep-Dive/air-admittance-value.jpg" />
+            <figcaption>Air Admittance Value Substitutes for Traditional Venting</figcaption>
+        </figure>
 
         <p>Water conservation is increasingly important in California, as statewide water restrictions have been in force for 5 of the last 10 years, and local water and sewer district restrictions have been on and off even more frequently as droughts have dramatically impacted surface water and groundwater levels.</p>
 
