--- a/Systems/recirc-loop.html
+++ b/Systems/recirc-loop.html
@@ -30,10 +30,12 @@
         </div>
     </nav>
 
+    <div class="nav-spacer"></div>
+
+    <div class="hero-banner" id="water-infographic"></div>
+
     <!-- Content -->
     <div class="container deep-dive">
-
-        <div class="nav-spacer"></div>
 
         <p><a href="../systems.html">Systems</a> > <a href="../Systems/water.html">Water</a> > <b>Hot Water Recirculating Loop</b></p>
 
