add sound isolation

--- a/Systems/sound-air.html
+++ b/Systems/sound-air.html
@@ -73,12 +73,12 @@
         <div class="row">
             <div class="column">
                 <div class="split left">
-                    <img src="../IMG/Systems/Air/conversation3.jpg">
+                    <img src="../IMG/Systems/Air/no-voc.jpg">
                 </div>
                 <div class="split right">
                     <div class="copy-block">
-                        <h2>Remote Hood Fan</h2>
-                        <p class="body-md">Most homes have a noisy hood fan over your stove top that's annoying and makes conversation difficult. However, it’s important to have the hood fan running while cooking as it expels toxic chemicals. While many people will simply not run the hood fan because of the loud annoyance, a remote hood fan is a better solution. It's super quiet so it keeps the air fresh and the conversation flowing.</p>
+                        <h2>Low to no VOCs</h2>
+                        <p class="body-md">VOCs or volatile organic compounds are nasty chemicals that are offgased in many paints, furnitures, and building materials. When these toxic compounds leak into the air and combine with other pollutants from cooking, candles, or even just breathing–  indoor air quality can be ten times worse than outdoor air. By using materials that have low to no VOCs and having great filtered air, you will stay healthy, alert, and happy.</p>
                     </div>
                 </div>
             </div>
@@ -87,13 +87,26 @@
             <div class="column">
                 <div class="split left">
                     <div class="copy-block">
-                        <h2>Low to no VOCs</h2>
-                        <p class="body-md"> VOCs or volatile organic compounds are nasty chemicals that are offgased in many paints, furnitures, and building materials. When these toxic compounds leak into the air and combine with other pollutants from cooking, candles, or even just breathing–  indoor air quality can be ten times worse than outdoor air. By using materials that have low to no VOCs and having great filtered air, you will stay healthy, alert, and happy.</p>
+                        <h2>Remote Hood Fan</h2>
+                        <p class="body-md">Most homes have a noisy hood fan over your stove top that's annoying and makes conversation difficult. However, it’s important to have the hood fan running while cooking as it expels toxic chemicals. While many people will simply not run the hood fan because of the loud annoyance, a remote hood fan is a better solution. It's super quiet so it keeps the air fresh and the conversation flowing.</p>
                     </div>
                 </div>
                 <div class="split right">
-                     <img src="../IMG/Systems/Air/no-voc.jpg">
+                     <img src="../IMG/Systems/Air/conversation3.jpg">
                 </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="column">
+                <div class="split left">
+                    <img src="../IMG/Experience/playing-drums.jpg">
+                </div>
+                <div class="split right">
+                    <div class="copy-block">
+                        <h2>Great Sound Isolation</h2>
+                        <p class="body-md">Through its use of triple-pane windows, a ductless HVAC system, individual room insulation, and drop door seals, you can have great sound isolation. This lets roommates work in peace and isolates you from outdoor noise so you won't wake up to the morning garbage trucks. It also lets a roommate play loud music or practice their instrument without disrupting others.</p>
+                    </div>
+                </div>     
             </div>
         </div>
     </div>
