--- a/home.html
+++ b/home.html
@@ -68,7 +68,7 @@
 
     <div class="banner">
         <blockquote>
-            <span class="quote-mark">“</span>Building quality, high-performance systems is cost-effective, hassle-saving, a joyful experience, sustainable, and should be incentivized.                                                                                   
+            <span class="quote-mark">“</span>Building quality, high-performance homes is cost-effective and should be incentivized. This creates a joyful living environments that makes your life easy, comfortable, and fun.<span class="quote-mark">”</span>                         
         </blockquote>
         <p class="quote-citation">-LilyPad Homeowners</p>
     </div>
