--- a/Systems/climate-management.html
+++ b/Systems/climate-management.html
@@ -65,7 +65,7 @@
         <a class="page-anchor" name="air-sealing"></a>
         <h1>Air Sealing</h1>
 
-        <iframe width="100%" height="422" src="https://www.youtube.com/embed/aHyZEazGwa8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe class="embedded-youtube" width="100%" src="https://www.youtube.com/embed/aHyZEazGwa8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
         <p>Air leaking into a well-constructed house circa 2000 comes in through gaps and cracks around windows and doors, where wall top plates and bottom plates join ceiling and floor construction, between sheets of plywood in the subfloor, around electrical and plumbing penetrations, and other places. If you add together all the cracks and leaky spaces in that year-2000 home, it would add up to a hole in the building about a 2-foot square in size. Today’s techniques reduce that hole to about a 6-inch square.</p>
 
