--- a/Systems/climate.html
+++ b/Systems/climate.html
@@ -34,7 +34,7 @@
     <img src="../IMG/Systems/Climate/outsulation-photo.jpg" />
 
     <!-- Content -->
-    <div class="container">
+    <div class="container sidebyside">
         <div class="row">
             <div class="column">
                 <div class="split left">
@@ -43,9 +43,10 @@
                 <div class="split right">
                     <div class="copy-block">
                         <h2>Outsulation</h2>
-                        <p class="body-md">The insulation (R-value) of your home determines how much heating or cooling you lose to the outside. One approach is to use thicker studs to allow for thicker insulation. However, the studs remain uninsulated. External Insulation or Outsulation<sup>TM</sup> greatly increases your home insulation and also protects against moisture build-up and other maladies.</p>
-                    </div>
+                        <p class="body-md">The insulation (R-value) of your home determines how much temperature you lose to the outside. A common approach uses thicker studs that allow for more insulation. However, the studs themselves remain uninsulated. External insulation greatly increases your home insulation and also protects against other maladies.</p>
+
                     <button class="float-right learn-more" onclick="location.href='climate-management.html#outsulation'" type="button">Learn More ></button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -67,7 +68,7 @@
 <!--     <div class="photos-carousel">
         <img src="../Placeholder/photos-carousel.png" />
     </div> -->
-    <div class="container">
+    <div class="container sidebyside">
         <div class="row">
             <div class="column">
                 <div class="split left">
