--- a/Systems/sound-air.html
+++ b/Systems/sound-air.html
@@ -35,7 +35,7 @@
     <div class="hero-banner" id="air-infographic"></div>
 
     <!-- Content -->
-    <div class="container">
+    <div class="container sidebyside">
         <div class="row">
             <div class="column">
                 <div class="split left">
@@ -44,9 +44,10 @@
                 <div class="split right">
                     <div class="copy-block">
                         <h2>Heat Recovery Ventilation</h2>
-                        <p class="body-md">A Heat Recovery Ventilation is a device built into your ventilation system. The HRV captures heat in the air that is being exhausted to the outdoors. Paired with a high-efficiency heating and cooling system, an HRV dramatically reduces the energy needed to heat or cool your home while keeping your air really fresh, filtered, and oxygenated.</p>
-                    </div>
+                        <p class="body-md">A Heat Recovery Ventilation device acts a hub for your ventilation system and recovers heat that is being exhausted to the outdoors. Paired with a high-efficiency heating and cooling system, an HRV dramatically reduces energy needs to heat or cool your home while keeping your air fresh, filtered, and oxygenated.</p>
+
                     <button class="float-right learn-more" onclick="location.href='climate-management.html#hrv'" type="button">Learn More ></button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -56,8 +57,9 @@
                     <div class="copy-block">
                         <h2>Air Sealing</h2>
                         <p class="body-md">As your home increases in efficiency and your total insulation improves, it also becomes important to seal the building well to prevent additional heat loss. A blower door test can identify leakages and improve air sealing. The better your home is sealed, the more you can control both temperature and ventilation.</p>
-                    </div>
+
                     <button class="float-right learn-more" onclick="location.href='climate-management.html#air-sealing'" type="button">Learn More ></button>
+                    </div>
                 </div>
                 <div class="split right">
                     <img src="../IMG/Systems/Air/air-sealing.jpg" />
@@ -69,7 +71,7 @@
 <!--     <div class="photos-carousel">
         <img src="../Placeholder/photos-carousel.png" />
     </div> -->
-    <div class="container">
+    <div class="container sidebyside">
         <div class="row">
             <div class="column">
                 <div class="split left">
