--- a/Systems/water.html
+++ b/Systems/water.html
@@ -34,7 +34,7 @@
     <div class="hero-banner" id="water-infographic"></div>
 
     <!-- Content -->
-    <div class="container">
+    <div class="container sidebyside">
         <div class="row">
             <div class="column">
                 <div class="split left">
@@ -43,9 +43,10 @@
                 <div class="split right">
                     <div class="copy-block">
                         <h2>Greywater Reuse</h2>
-                        <p class="body-md"> Stop pouring your wastewater, quite literally, down the drain. By reusing water you are not only saving money from your water bill– you’re also preparing for years of drought and providing automatic irrigation. Each sink has a convenient switch that remotely diverts the drain to the sewer if you need to get rid of some nasty chemicals.</p>
-                    </div>
+                        <p class="body-md">Stop pouring your wastewater, quite literally, down the drain. By reusing water you are not only saving money but you’re also preparing for years of drought and providing automatic irrigation. Convenient switches divert the drain to the sewer if you need to get rid of something you don't want on your plants.</p>
+
                     <button class="float-right learn-more" onclick="location.href='greywater.html'" type="button">Learn More ></button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -55,8 +56,9 @@
                     <div class="copy-block">
                         <h2>Hot Water Recirculating Loops</h2>
                         <p class="body-md">Ordinarily, every time you turn on a hot faucet you have to wait for the cold water to be cleared out. This not only wastes water and time, but is uncomfortable when while you’re waiting naked in the shower. Motion-detectors automagically turn on the recircirculating loop giving you instant hot water.</p>
-                    </div>
+
                     <button class="float-right learn-more" onclick="location.href='recirc-loop.html'" type="button">Learn More ></button>
+                    </div>
                 </div>
                 <div class="split right">
                     <img src="../IMG/Systems/Water/faucet.jpg">
@@ -67,7 +69,7 @@
 <!--     <div class="photos-carousel">
         <img src="../Placeholder/photos-carousel.png" />
     </div> -->
-    <div class="container">
+    <div class="container sidebyside">
         <div class="row">
             <div class="column">
                 <div class="split left">
@@ -86,7 +88,7 @@
                 <div class="split left">
                     <div class="copy-block">
                         <h2>Rainwater Capture</h2>
-                        <p class="body-md">Rainwater presents an opportunity to capture free water. Sometimes referred to as “purple water”, captured rainwater can be stored either in an above ground or underwater cistern. Not suitable for drinking, but suitable for many of the same uses as gray water captured rainwater can be used for flushing toilets, running your washing machine, or watering your landscape.</p>
+                        <p class="body-md">Rainwater presents an opportunity to capture free water. Sometimes referred to as “purple water”, captured rainwater can be stored either in an above ground or underwater cistern. Not suitable for drinking, but suitable for many of the same uses as greywater captured rainwater can be used for flushing toilets, running your washing machine, or watering your landscape.</p>
                     </div>
                 </div>
                 <div class="split right">
