--- a/design.html
+++ b/design.html
@@ -33,7 +33,7 @@
     <div class="nav-spacer"></div>
 
     <!-- Content -->
-    <div class="container">
+    <div class="container sidebyside">
 
         <img src="Placeholder/design-video.png" class="video" />
         <div class="row">
@@ -85,7 +85,7 @@
         <p class="quote-citation">-LilyPad Homeowners</p>
     </div> -->
 
-    <div class="container">
+    <div class="container sidebyside">
         <div class="row">
             <div class="column">
                 <div class="split left">
