--- a/Systems/electricity.html
+++ b/Systems/electricity.html
@@ -41,7 +41,7 @@
     <div class="hero-banner" id="electricity-infographic"></div>
 
     <!-- Content -->
-    <div class="container">
+    <div class="container sidebyside">
         <div class="row">
             <div class="column">
                 <div class="split left">
@@ -60,9 +60,10 @@
                 <div class="split left">
                     <div class="copy-block">
                         <h2>Sun Power</h2>
-                        <p class="body-md">By covering your entire rooftop in solar you can have enough energy for everything in your life. This includes heating, cooling, state-of-the-art appliances, electric cars, and still have plenty of excess energy to sell back to the grid. Stop paying for electricity, heating, and gasoline and instead have your energy company pay you.</p>
-                    </div>
+                        <p class="body-md">By covering your entire rooftop in solar you can have enough energy for everything in your life. This includes heating, cooling, state-of-the-art appliances, electric cars, and still have plenty of excess energy to sell back to the grid. Stop paying for electricity, heating, and gas and instead get paid.</p>
+
                     <button class="float-right learn-more" onclick="location.href='solar-panels.html'" type="button">Learn More ></button>
+                    </div>
                 </div>
                 <div class="split right">
                     <img src="../IMG/Systems/Electricity/solar-panels.jpg">
@@ -73,7 +74,7 @@
 <!--     <div class="photos-carousel">
         <img src="../Placeholder/photos-carousel.png" />
     </div> -->
-    <div class="container">
+    <div class="container sidebyside">
         <div class="row">
             <div class="column">
                 <div class="split left">
@@ -82,10 +83,10 @@
                 <div class="split right">
                     <div class="copy-block">
                         <h2>Electric Car Charging</h2>
-                        <p class="body-md">Solar power enables you to be your own power plant. Now you can go electric and not ever have to stop and pay for gas, deal with the constant maintenance headaches of a gas engine, or worry about the emissions or smog you’re creating around your children. It’s a truly empowering feeling to drive on free clean sunshine you’ve produced.</p>
-                    </div>
-                    <button class="float-right learn-more" onclick="location.href='ev-charging.html'" type="button">Learn More ></button>
+                        <p class="body-md">Solar power lets you to be your own power plant. Now you can drive electric and stop paying for gas, deal with maintenance headaches of a gas engine, or worry about the emissions or smog you’re creating around your children. It’s truly empowering to drive on free clean sunshine you’ve produced.</p>
 
+                    <button class="float-right learn-more" onclick="location.href='ev-charging.html'" type="button">Learn More ></button>
+                    </div>
                 </div>
             </div>
         </div>
