--- a/experience.html
+++ b/experience.html
@@ -33,7 +33,7 @@
     <div class="nav-spacer"></div>
 
     <!-- Content -->
-    <div class="container">
+    <div class="container sidebyside">
 
         <img src="Placeholder/experience-video.png" class="video" />
         <div class="row">
@@ -70,7 +70,7 @@
         </blockquote>
         <p class="quote-citation">-Ut enim ad minim veniam</p>
     </div> -->
-    <div class="container">
+    <div class="container sidebyside">
         <div class="row">
             <div class="column">
                 <div class="split left">
@@ -104,7 +104,7 @@
             </blockquote>
             <p class="quote-citation">-Ut enim ad minim veniam</p>
     </div> -->
-    <div class="container">
+    <div class="container sidebyside">
         <div class="row">
             <div class="column">
                 <div class="split left">
