--- a/home.html
+++ b/home.html
@@ -44,7 +44,7 @@
 
         <h1>Homes That Work For Us</h1>
 
-        <div class="row">
+        <div class="row threecol-wrapper">
             <div class="three-column">
                 <img class="icons" src="Icons/net-positive.png" />
                 <h2>Net Positive Energy</h2>
@@ -73,7 +73,7 @@
         <p class="quote-citation">-LilyPad Homeowners</p>
     </div>
 
-    <div class="container">
+    <div class="container sidebyside">
         <div class="row">
             <div class="column">
                 <div class="split left">
