--- a/Systems/greywater.html
+++ b/Systems/greywater.html
@@ -54,7 +54,7 @@
 
         <figure class="clear">
             <img src="../IMG/Deep-Dive/diversion-switch.jpg" />
-            <figcaption>Diversion Value Activated by Remote Switch Next to Sinks</figcaption>
+            <figcaption>Diversion Valve Activated by Remote Switch Next to Sinks</figcaption>
         </figure>
 
         <p>Near each greywater drain there is a button which activates a diverter valve before the holding tank. Pressing the button moves the valve, and diverts the drain flow from greywater to black water (sewer) or vice versa. That way, if you need to put something nasty down the drain, like hair dye or cleaning chemicals, you can divert the flow to the sewer, then put it back to normal greywater recovery when finished.</p>
@@ -62,8 +62,8 @@
         <p>The holding tank has a filtration system to prevent bacterial and algal blooms, and only requires cleaning once a year. When the tank gets full, a pump moves the stored water through the indexing valve, and out to the garden. The pump activates once every 24 hours if it hasn’t been turned on, flushing with fresh water to keep the system active and clean.</p>
 
         <figure class="clear">
-            <img src="../IMG/Deep-Dive/air-admittance-value.jpg" />
-            <figcaption>Air Admittance Value Substitutes for Traditional Venting</figcaption>
+            <img src="../IMG/Deep-Dive/air-admittance-valve.jpg" />
+            <figcaption>Air Admittance Valve Substitutes for Traditional Venting</figcaption>
         </figure>
 
         <p>Water conservation is increasingly important in California, as statewide water restrictions have been in force for 5 of the last 10 years, and local water and sewer district restrictions have been on and off even more frequently as droughts have dramatically impacted surface water and groundwater levels.</p>
