--- a/contact-us.html
+++ b/contact-us.html
@@ -14,7 +14,7 @@
         }
 
         #contact-box {
-            width: 400px;
+            max-width: 400px;
             text-align: center;
             margin: 0 auto;
         }
