new photography and 3D walkthrough

--- a/Systems/climate-management.html
+++ b/Systems/climate-management.html
@@ -99,7 +99,7 @@
         <p>A blower door test will result in a score that is expressed as Air Changes per Hour at 50 Pascal (ACH50). The video on the topic of Blower Door Testing gives a table that interprets an ACH50 score in terms of relative leakiness or points in various rating systems.</p>
 
         <a class="page-anchor" name="outsulation"></a>
-        <h1>Outsulation</h1>
+        <h1>External Insulation</h1>
 
         <p>LilyPad uses the Dryvit system, with a 2” EPS insulation layer. It not only provides insulation (outsulation), but incorporates a water-resistive barrier, a drainage plane, and a finish coat that is extraordinarily flat and smooth. With the color embedded in the finish coat, the surface is virtually maintenance-free.</p>
 
