--- a/Systems/climate.html
+++ b/Systems/climate.html
@@ -42,7 +42,7 @@
                 </div>
                 <div class="split right">
                     <div class="copy-block">
-                        <h2>Outsulation</h2>
+                        <h2>External Insulation</h2>
                         <p class="body-md">The insulation (R-value) of your home determines how much temperature you lose to the outside. A common approach uses thicker studs that allow for more insulation. However, the studs themselves remain uninsulated. External insulation greatly increases your home insulation and also protects against other maladies.</p>
 
                     <button class="float-right learn-more" onclick="location.href='climate-management.html#outsulation'" type="button">Learn More ></button>
@@ -59,7 +59,7 @@
                     </div>
                 </div>
                 <div class="split right">
-                    <img src="../IMG/Systems/Climate/electric-fireplace.jpg" />
+                    <img src="../IMG/Systems/Climate/electric-fireplace2.jpg" />
                 </div>
                 </div>     
             </div>
@@ -72,7 +72,7 @@
         <div class="row">
             <div class="column">
                 <div class="split left">
-                    <img src="../IMG/Systems/Climate/windows.jpg">
+                    <img src="../IMG/Systems/Climate/windows2.jpg">
                 </div>
                 <div class="split right">
                     <div class="copy-block">
@@ -91,7 +91,7 @@
                     </div>
                 </div>
                 <div class="split right">
-                     <img src="../IMG/Systems/Climate/heat-pump.jpg">
+                     <img src="../IMG/Systems/Climate/heat-pump2.jpg">
                 </div>
             </div>
         </div>
