--- a/design.html
+++ b/design.html
@@ -58,14 +58,14 @@
                     </div>
                 </div>
                 <div class="split right">
-                    <img src="Placeholder/before-after.png">
+                    <img src="IMG/Design/welcoming-front.jpg">
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="column">
                 <div class="split left">
-                     <img src="IMG/Design/edible-garden.jpg">
+                     <img src="IMG/Design/edible-garden2.jpg">
                 </div>
                 <div class="split right">
                     <div class="copy-block">
@@ -126,7 +126,7 @@
                 </div>
 
                 <div class="split right">
-                    <img src="IMG/Design/outside-in.jpg">
+                    <img src="IMG/Design/outside-in3.jpg">
                 </div>
             </div>
         </div>
