--- a/home.html
+++ b/home.html
@@ -35,12 +35,13 @@
 
     <div class="nav-spacer"></div>
 
-    <div class="hero-banner" id="vr-hero"></div>
+    <div class="hero-banner" id="vr-hero">
+        
+        <iframe width='100%' height='500' src='https://my.matterport.com/show/?m=hg7GKg96xbB' frameborder='0' allowfullscreen allow='vr'></iframe>
+    </div>
 
     <!-- Content -->
     <div class="container">
-
-        <img src="Placeholder/Intro-video.png" class="video" />
 
         <h1>Homes That Work For Us</h1>
 
@@ -74,6 +75,9 @@
     </div>
 
     <div class="container sidebyside">
+
+        <img src="Placeholder/Intro-video.png" class="video" />
+        
         <div class="row">
             <div class="column">
                 <div class="split left">
