--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
     <div class="banner">
         <blockquote>
-            <span class="quote-mark">“</span>Building quality, high-performance homes is cost-effective and should be incentivized. This creates a joyful living environments that makes your life easy, comfortable, and fun.<span class="quote-mark">”</span>                         
+            <span class="quote-mark">“</span>High-performance homes save you money and are a joy to live in. This makes your life easy, comfortable, and fun.<span class="quote-mark">”</span>                         
         </blockquote>
         <p class="quote-citation">-LilyPad Homeowners</p>
     </div>
@@ -80,6 +80,9 @@
         
         <div class="row">
             <div class="column">
+                <div class="split right">
+                     <img src="IMG/Home/innovative-design.jpg">
+                </div>
                 <div class="split left">
                     <div class="copy-block">
                         <h2>Innovative Design</h2>
@@ -89,11 +92,7 @@
                             <a href="design.html">Learn More ></a>
                         </button>
                     </div>
-                </div>
-
-                <div class="split right">
-                     <img src="IMG/Home/innovative-design.jpg">
-                </div>
+                </div>                
             </div>
         </div>
         <div class="row">
