--- a/resources.html
+++ b/resources.html
@@ -132,7 +132,7 @@
     <!-- Content -->
     <div class="container" id="resource-container">
         <h4 id="resource-blurb">
-            Many thanks to these people and organizations. We highly <br/>recommend them for your high-performance home project.
+            Many thanks to these people and organizations. We highly recommend them for your high-performance home project.
         </h4>
 
         <div id="resource-contacts">
